fix: layout issues

--- a/admin/src/assets/styles/components/_FloatingPanel.scss
+++ b/admin/src/assets/styles/components/_FloatingPanel.scss
@@ -17,7 +17,7 @@
 	}
 
 	&__generator {
-		max-width: 40.5rem;
+		max-width: 45rem;
 		font-size: 0.825rem;
 		left: calc(100vw - var(--posLeft));
 		bottom: calc(100vh - var(--posBottom) + 1rem);
